--- a/style.css
+++ b/style.css
@@ -321,7 +321,7 @@ html, body {
 	transition: 0.5s;
 }
 .tlgr_btn:hover{
-	background-color: #2a9a3b;
+	background-color: #026fa6;
 	transition: 0.5s;
 }
 .left{
